Added missing files

--- a/config/detail_commanding.local.php.dist
+++ b/config/detail_commanding.local.php.dist
@@ -2,5 +2,11 @@
 
 return array(
     'detail_commanding' => array(
+        'commands' => array(
+            array(
+                'command' => 'Some\Command\Class',
+                'handler' => 'Some\Handler\Class',
+            ),
+        ),
     ),
 );
