Added support for listener configuration

--- a/config/detail_commanding.local.php.dist
+++ b/config/detail_commanding.local.php.dist
@@ -8,5 +8,8 @@ return array(
                 'handler' => 'Some\Handler\Class',
             ),
         ),
+        'listeners' => array(
+            'Some/Listener/Class',
+        ),
     ),
 );
