--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "zendframework/zend-servicemanager": "2.*",
         "detailnet/dfw-core": "~0.1.1",
         "detailnet/dfw-log-module": "~0.2.0",
-        "detailnet/dfw-commanding": "dev-tweak/listing"
+        "detailnet/dfw-commanding": "~0.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.4.5",
