--- a/composer.json
+++ b/composer.json
@@ -26,15 +26,18 @@
         "zendframework/zend-modulemanager": "2.*",
         "zendframework/zend-mvc": "2.*",
         "zendframework/zend-servicemanager": "2.*",
-        "detailnet/dfw-core": "~0.1.1",
-        "detailnet/dfw-log-module": "~0.2.0",
+        "detailnet/dfw-core": "~0.2",
         "detailnet/dfw-commanding": "~0.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.4.5",
         "squizlabs/php_codesniffer" : "~2.2.0",
         "phpmd/phpmd": "~2.1.3",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "dev-master",
+        "detailnet/dfw-log-module": "~0.2.0"
+    },
+    "suggest": {
+        "detailnet/dfw-log-module": "For usage of Detail\\Commanding\\Listener\\LoggingListener"
     },
     "autoload": {
         "psr-0": {
