--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.5.0",
         "psr/log": "~1.0",
         "zendframework/zend-loader": "2.*",
         "zendframework/zend-modulemanager": "2.*",
@@ -30,11 +30,11 @@
         "detailnet/dfw-commanding": "~0.2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.4.5",
-        "squizlabs/php_codesniffer" : "~2.2.0",
-        "phpmd/phpmd": "~2.1.3",
+        "phpunit/phpunit": "^4.4.5",
+        "squizlabs/php_codesniffer" : "^2.2.0",
+        "phpmd/phpmd": "^2.1.3",
         "satooshi/php-coveralls": "dev-master",
-        "detailnet/dfw-log-module": "~0.2.0"
+        "detailnet/dfw-log-module": "^0.2.0"
     },
     "suggest": {
         "detailnet/dfw-log-module": "For usage of Detail\\Commanding\\Listener\\LoggingListener"
