--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "detailnet/dfw-commanding-module",
-    "description": "Zend Framework 2 Module for dfw-commanding",
+    "description": "Zend Framework Module for dfw-commanding",
     "type": "library",
     "keywords": [
         "dfw",
@@ -9,7 +9,7 @@
         "bus",
         "dispatcher",
         "module",
-        "zf2"
+        "zf"
     ],
     "homepage": "https://github.com/detailnet/dfw-commanding-module/",
     "license": "MIT",
@@ -20,21 +20,22 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
-        "psr/log": "~1.0",
-        "zendframework/zend-loader": "2.*",
-        "zendframework/zend-modulemanager": "2.*",
-        "zendframework/zend-mvc": "2.*",
-        "zendframework/zend-servicemanager": "2.*",
-        "detailnet/dfw-core": "~0.2",
-        "detailnet/dfw-commanding": "~0.5.0"
+        "php": "^7.0",
+        "zendframework/zend-eventmanager": "^3.0.1",
+        "zendframework/zend-loader": "^2.5.1",
+        "zendframework/zend-modulemanager": "^2.7.2",
+        "zendframework/zend-mvc": "^3.0.1",
+        "zendframework/zend-servicemanager": "^3.1",
+        "detailnet/dfw-core": "^0.3",
+        "detailnet/dfw-commanding": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.4.5",
-        "squizlabs/php_codesniffer" : "^2.2.0",
-        "phpmd/phpmd": "^2.1.3",
-        "satooshi/php-coveralls": "~1.0",
-        "detailnet/dfw-log-module": "^0.2.0"
+        "psr/log": "^1.0",
+        "phpunit/phpunit": "^6.0",
+        "squizlabs/php_codesniffer" : "^2.2",
+        "phpmd/phpmd": "^2.2",
+        "satooshi/php-coveralls": "^1.0",
+        "detailnet/dfw-log-module": "^1.0.0"
     },
     "suggest": {
         "detailnet/dfw-log-module": "For usage of Detail\\Commanding\\Listener\\LoggingListener"
