--- a/config/detail_commanding.local.php.dist
+++ b/config/detail_commanding.local.php.dist
@@ -1,15 +1,15 @@
 <?php
 
-return array(
-    'detail_commanding' => array(
-        'commands' => array(
-            array(
+return [
+    'detail_commanding' => [
+        'commands' => [
+            [
                 'command' => 'Some\Command\Class',
                 'handler' => 'Some\Handler\Class',
-            ),
-        ),
-        'listeners' => array(
+            ],
+        ],
+        'listeners' => [
             'Some/Listener/Class',
-        ),
-    ),
-);
+        ],
+    ],
+];
