--- a/composer.json
+++ b/composer.json
@@ -20,50 +20,47 @@
         }
     ],
     "require": {
-        "php": "^7.0",
+        "php": "^7.1",
         "zendframework/zend-eventmanager": "^3.0.1",
-        "zendframework/zend-loader": "^2.5.1",
         "zendframework/zend-modulemanager": "^2.7.2",
         "zendframework/zend-mvc": "^3.0.1",
         "zendframework/zend-servicemanager": "^3.1",
-        "detailnet/dfw-core": "^0.3",
+        "zendframework/zend-stdlib": "^3.0.1",
         "detailnet/dfw-commanding": "^1.0"
     },
     "require-dev": {
         "psr/log": "^1.0",
-        "phpunit/phpunit": "^6.0",
-        "squizlabs/php_codesniffer" : "^2.2",
+        "phpunit/phpunit": "^7.0",
+        "squizlabs/php_codesniffer" : "^3.2",
         "phpmd/phpmd": "^2.2",
-        "satooshi/php-coveralls": "^1.0",
+        "roave/security-advisories": "dev-master",
         "detailnet/dfw-log-module": "^1.0.0"
     },
     "suggest": {
         "detailnet/dfw-log-module": "For usage of Detail\\Commanding\\Listener\\LoggingListener"
     },
     "autoload": {
-        "psr-0": {
+        "psr-4": {
             "Detail\\Commanding\\": "src/"
         }
     },
     "autoload-dev": {
-        "psr-0": {
+        "psr-4": {
             "DetailTest\\Commanding\\": "tests/"
         }
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.x-dev"
-        }
-    },
-    "archive": {
-        "exclude": [
-            "!vendor",
-            "tests",
-            "*phpunit.xml",
-            ".travis.yml",
-            "build.xml",
-            "build.properties",
-            "composer.phar"
-        ]
+    "scripts": {
+        "check": [
+            "@cs-check",
+            "@md-check",
+            "@test"
+        ],
+        "cs-check": "phpcs --standard=phpcs.xml -v",
+        "cs-check-report": "phpcs --standard=phpcs.xml --report=checkstyle --report-file=build/checkstyle.xml",
+        "md-check": "phpmd src xml phpmd.xml",
+        "md-check-report": "phpmd src xml phpmd.xml --reportfile build/pmd.xml",
+        "test": "phpunit",
+        "test-coverage-html": "phpunit --coverage-html build/coverage",
+        "test-coverage-clover": "phpunit --coverage-clover build/clover.xml"
     }
 }
